@@ -1,0 +1,2 @@
+
+The test passes if WebKit doesn't crash or hit an assertion.
