@@ -1,0 +1,15 @@
+<!DOCTYPE html>
+<style>
+marquee { -webkit-clip-path: url(#foo); }
+</style>
+<script>
+function runTest() {
+if (window.testRunner)
+    testRunner.dumpAsText();
+document.getElementsByTagName('marquee')[0].style.cssText = "display: inline";
+}
+</script>
+<body onload="runTest()">
+<iframe srcdoc="bar"></iframe>
+<marquee></marquee>
+<p>The test passes if WebKit doesn't crash or hit an assertion.</p>
